# autophd

./: .gitignore  README.md  pyproject.toml
autophd/: __init__.py  orchestrator.py
configs/: example_config.yaml
docs/: RESEARCH_PROTOCOL.md
