[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autophd"
version = "0.1.0"
description = "Closed-loop automated research orchestration with Codex and Claude Code review gates."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
autophd = "autophd.orchestrator:main"

